<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_home"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="viettronicswiportal.viettronics.duongdinhthinh.viettronicswiportal.Controller.HomeActivity"
    tools:showIn="@layout/app_bar_home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/home_layout_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_VanBanDen"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@mipmap/ic_folder_download" />

                <TextView
                    android:id="@+id/text_VanBanDen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/van_ban_den"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_TaiLieuLuuTru"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@mipmap/ic_folder_file" />

                <TextView
                    android:id="@+id/text_TaiLieuLuuTru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tai_lieu_luu_tru"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_LichCaNhan"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@mipmap/ic_calendar_canhan" />

                <TextView
                    android:id="@+id/text_LichCaNhan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lich_ca_nhan"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:id="@+id/home_layout_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_VanBanDi"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@mipmap/ic_folder_upload" />

                <TextView
                    android:id="@+id/text_VanBanDi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/van_ban_di"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_ThongBaoNoiBo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="3dp"
                    app:srcCompat="@mipmap/ic_notification_2" />

                <TextView
                    android:id="@+id/text_ThongBaoNoiBo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/thong_bao_noi_bo"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_SinhNhat"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@mipmap/ic_gift" />

                <TextView
                    android:id="@+id/text_SinhNhat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sinh_nhat"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:id="@+id/home_layout_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_CongViec"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@mipmap/ic_work" />

                <TextView
                    android:id="@+id/text_CongViec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/cong_viec"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_LichCoQuan"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@mipmap/ic_calendar_coquan" />

                <TextView
                    android:id="@+id/text_LichCoQuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lich_co_quan"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_ThietLap"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@mipmap/ic_settings" />

                <TextView
                    android:id="@+id/text_ThietLap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/thiet_lap"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/AlertDialog.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="@color/grey"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/ban_quyen" />

</RelativeLayout>
