<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurred"
    tools:context="viettronicswiportal.viettronics.duongdinhthinh.viettronicswiportal.Controller.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_viettronics" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/van_phong_dien_tu"
                android:textAlignment="center"
                android:textColor="@color/text_white"
                android:textSize="17dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/ic_user_128" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/text_white"
                    android:textColorHint="#FFF"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:backgroundTint="@color/text_white"
                        android:hint="@string/ten_dang_nhap"
                        android:inputType="text"
                        android:textColor="@color/text_white"
                        android:textColorHint="@color/text_white" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/ic_lock_128" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_input_username"
                    android:backgroundTint="@color/text_white"
                    android:textColorHint="#FFF"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_matkhau"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:backgroundTint="@color/text_white"
                        android:hint="@string/mat_khau"
                        android:inputType="textPassword"
                        android:textColor="@color/text_white" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bDangNhap"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@id/login_layout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"
            android:text="@string/dang_nhap"
            android:textColor="@color/text_white"
            android:textColorHint="#FFF"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/login_QuenMatKhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/quen_mat_khau"
        android:textColor="@color/text_white" />

</RelativeLayout>
