<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="viettronicswiportal.viettronics.duongdinhthinh.viettronicswiportal.Controller.Settings.ThietLapActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/grey"
        android:paddingLeft="5dp"
        android:id="@+id/thietlap_title"
        android:text="@string/thiet_lap"
        style="@style/AlertDialog.AppCompat"
        android:textStyle="bold|italic"
        android:textAllCaps="true"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border_shadow_right_bottom"
        android:id="@+id/thietlap_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/thietlap_title">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Administrator"
            android:layout_margin="5dp"
            android:textStyle="bold"
            style="@style/AlertDialog.AppCompat"
            android:textAllCaps="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/grey"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:id="@+id/thietlap_layout_danhsachnguoidung"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/thietlap_img_DanhSachNguoiDung"
                android:layout_width="17dp"
                android:src="@mipmap/ic_add_user"
                android:layout_height="17dp" />
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/thietlap_txt_DanhSachNguoiDung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Danh sách người dùng"
                style="@style/AlertDialog.AppCompat"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:background="@drawable/border_shadow_right_bottom"
        android:layout_below="@id/thietlap_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tài khoản"
            android:layout_margin="5dp"
            android:textStyle="bold"
            style="@style/AlertDialog.AppCompat"
            android:textAllCaps="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/grey"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="17dp"
                android:src="@mipmap/ic_edit_256"
                android:layout_height="17dp" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Thay đổi thông tin cá nhân"
                style="@style/AlertDialog.AppCompat"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="17dp"
                android:src="@mipmap/ic_password"
                android:layout_height="17dp" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mat_khau"
                style="@style/AlertDialog.AppCompat"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="17dp"
                android:src="@mipmap/ic_language_256"
                android:layout_height="17dp" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ngôn ngữ"
                style="@style/AlertDialog.AppCompat"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="17dp"
                android:src="@mipmap/ic_location_128"
                android:layout_height="17dp" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Vị trí"
                style="@style/AlertDialog.AppCompat"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="17dp"
                android:src="@mipmap/ic_logout_128"
                android:layout_height="17dp" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Đăng xuất"
                style="@style/AlertDialog.AppCompat"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

    </LinearLayout>
    <TextView
        style="@style/AlertDialog.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="@color/grey"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/ban_quyen"
        android:id="@+id/textView6" />
</RelativeLayout>
